--- a/前端知识.md
+++ b/前端知识.md
@@ -1,1 +1,3 @@
-##输入一个www.baidu.com 中间发生了什么?(http://fex.baidu.com/blog/2014/05/what-happen/)
+##描述在浏览器地址中输入www.baidu.com到现实页面中间发生了什么?
+###http://fex.baidu.com/blog/2014/05/what-happen/
+###http://buttercola.blogspot.hk/2014/12/system-design-what-happened-if-you-tap.html
